samples/_failures_safe/1761370033_5cd654_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4fc825ee.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_4fc825ee.c:150:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  150 |     const char *type
      |     ^~~~~
./samples/SAFE/__tmp_4fc825ee.c:150:5: error: expected declaration or statement at end of input
